--- a/thesis.tex
+++ b/thesis.tex
@@ -13,8 +13,8 @@
 \input{chap/background}
 \input{chap/litreview}
 % \includepdf[pages=-,addtotoc={1,chapter,1,Compiler Fuzzing through Deep Learning,app:adapt}]{2017-asplos.pdf}
-% \input{cgo-2017/paper}
-% \input{pact-2017/paper}
+\input{cgo-2017/paper}
+\input{pact-2017/paper}
 
 \input{chap/conclusions}
 \input{bibliography}
