--- a/preamble.tex
+++ b/preamble.tex
@@ -137,6 +137,8 @@ natbib=true,         % natbib compatability
 
 \usepackage{color}
 \newcommand{\todo}[1]{{\color{red}{#1}}}
+\newcommand{\cc}[1]{{\color{orange}{#1}}}
+\newcommand{\factcheck}[1]{{\color{orange}{#1}}}
 
 \usepackage{mathtools}
 \DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
