Update on Overleaf.

--- a/cv.tex
+++ b/cv.tex
@@ -93,7 +93,18 @@
   \newline\vspace{-.8em}
 
   \noindent %
-  Deep learning over programs. Developing machine learning methods for random program generation, compiler optimisations, and representative benchmarking. Applications for heterogeneous parallelism, testing, and adaptive performance tuning. To date: 4 publications, 3 invited talks, 5 posters, 4 conferences.%
+  \begin{itemize}
+    \setlength\itemsep{.2em}
+    \item Introduced deep learning over program code.
+    \item Demonstrated three applications, each published in top-tier conferences:
+    \begin{itemize}
+      \item Program generation (CGO’17)
+      \item Optimization heuristic construction (PACT’17)
+      \item Compiler testing (ASPLOS’18)
+    \end{itemize}
+    \item Won two best paper awards.
+    \item Freely published all research code and data on GitHub: \url{http://github.com/ChrisCummins}.
+  \end{itemize}
 }
 
 \Description{\MarginText{2015}\textbf{MSc by Research, Pervasive Parallelism}
