Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -11923,17 +11923,12 @@
     keywords = {by the research council, continuous integration, inforcement learning, machine learning, of norway, rcn, re-, regression testing, test case prioritization, test case selection, this work is supported, through the research-}
 }
 
-@article{Yaneva2017,
+@inproceedings{Yaneva2017,
     title = {{Compiler-Assisted Test Acceleration on GPUs for Embedded Software}},
     year = {2017},
-    author = {Yaneva, Vanya and Rajan, Ajitha and Dubach, Christophe},
-    number = {17},
-    pages = {35--45},
-    volume = {11},
-    url = {https://doi.org/10.1145/3092703.3092720},
-    isbn = {9781450350761},
-    doi = {10.1145/3092703.3092720},
-    keywords = {Auto-mated testing, Compilers, Embedded software, GPUs, KEYWORDS Functional testing, Source code generation}
+    booktitle = {ISSTA},
+    author = {Yaneva, V. and Rajan, A. and Dubach, C.},
+    keywords = {Automated testing, Compilers, Embedded software, GPUs, KEYWORDS Functional testing, Source code generation}
 }
 
 @article{Ching2017a,
@@ -11942,4 +11937,318 @@
     author = {Ching, Travers and Himmelstein, Daniel S and Beaulieu-Jones, Brett K and Kalinin, Alexandr A and Do, Brian T and Way, Gregory P and Ferrero, Enrico and Agapow, Paul-Michael and Xie, Wei and Rosen, Gail L and Lengerich, Benjamin J and Israeli, Johnny},
     url = {http://dx.doi.org/10.1101/142760},
     doi = {10.1101/142760}
+}
+
+@inproceedings{Murali,
+    title = {{Bayesian Specification Learning for Finding API Usage Errors}},
+    booktitle = {FSE},
+    author = {Murali, V. and Chaudhuri, S. and Jermaine, C.},
+    isbn = {9781450351058},
+    keywords = {2017, acm reference format, and chris jermaine, anomaly detection, apis, bayesian, bug finding, cation learning, speci, swarat chaudhuri, vijayaraghavan murali}
+}
+
+@article{Santos2017,
+    title = {{Finding and correcting syntax errors using recurrent neural networks}},
+    year = {2017},
+    journal = {PeerJ Preprints},
+    author = {Santos, E. A. and Campbell, J. C. and Hindle, A. and Amaral, N.},
+    keywords = {deep learning, github, javascript, lstm, n-gram, network, neural, program repair, rnn, syntax error, syntax error correction}
+}
+
+@inproceedings{Danaee2016,
+    title = {{A Deep Learning Approach for Cancer Detection and Relevant Gene Identification.}},
+    year = {2017},
+    booktitle = {Pacific Symposium on Biocomputing},
+    author = {Danaee, P. and Ghaeini, R. and Hendrix, D. A.},
+    keywords = {cancer detection, classification, deep learning, dimensionality reduction, rna-seq expression, stacked denoising autoencoder}
+}
+
+@article{Hsu2015,
+    title = {{Neural Network-based Clustering Using Pairwise Constraints}},
+    year = {2016},
+    journal = {arXiv:1511.06321},
+    author = {Hsu, Y. and Kira, Z.}
+}
+
+@inproceedings{Midtgaard2017,
+    title = {{Effect-Driven QuickChecking of Compilers}},
+    year = {2017},
+    booktitle = {ICFP},
+    author = {Midtgaard, J. and Justesen, M. N. and Kasting, P. and Nielson, F. and Nielson, H. R.},
+    keywords = {QuickCheck, compiler testing, type and effect system}
+}
+
+@article{Wang2013a,
+    title = {{Large-Scale Graph Processing Algorithms on the GPU}},
+    year = {2013},
+    author = {Wang, Y. and Owens, J.}
+}
+
+@inproceedings{Moscovici2017,
+    title = {{A GPU-Friendly Skiplist Algorithm}},
+    year = {2017},
+    booktitle = {PACT},
+    author = {Moscovici, N. and Cohen, N. and Petrank, E.},
+    isbn = {9781450344937},
+    doi = {10.1145/3018743.3019032},
+    keywords = {Data Structures, GPU, SIMD, Skip List}
+}
+
+@techreport{Petoumenos,
+    title = {{Royal Academy of Engineering Research Fellowship}},
+    year = {2017},
+    author = {Petoumenos, P.}
+}
+
+@inproceedings{Moscovici2017a,
+    title = {{A GPU-Friendly Skiplist Algorithm}},
+    year = {2017},
+    booktitle = {PACT},
+    author = {Moscovici, N. and Cohen, N. and Petrank, E.},
+    isbn = {9781450344937},
+    doi = {10.1145/3018743.3019032},
+    keywords = {Data Structures, GPU, SIMD, Skip List}
+}
+
+@inproceedings{Han2017a,
+    title = {{Graphie: Large-Scale Asynchronous Graph Traversals on Just a GPU}},
+    year = {2017},
+    booktitle = {PACT},
+    author = {Han, W. and Mawhirter, D. and Wu, B. and Buland, M.},
+    isbn = {9781509067640},
+    doi = {10.1109/PACT.2017.41}
+}
+
+@article{Zoph2016,
+    title = {{Neural Architecture Search with Reinforcement Learning}},
+    year = {2016},
+    journal = {arXiv:1611.01578},
+    author = {Zoph, B. and Le, Q. V.},
+    isbn = {9781424425051},
+    issn = {1938-7228},
+    arxivId = {1611.01578}
+}
+
+@inproceedings{Hong2017,
+    title = {{MultiGraph: Efficient Graph Processing on GPUs}},
+    year = {2017},
+    booktitle = {PACT},
+    author = {Hong, C. and Sukumaran-rajam, A. and Kim, J. and Sadayappan, P.},
+    isbn = {9781509067640},
+    doi = {10.1109/PACT.2017.48}
+}
+
+@inproceedings{Filipovic2017,
+    title = {{Autotuning of OpenCL Kernels with Global Optimizations}},
+    year = {2017},
+    booktitle = {ANDARE},
+    author = {Filipovi{\v{c}}, J. and Petrovi{\v{c}}, F. and Benkner, S.}
+}
+
+@techreport{Patra2016,
+    title = {{Learning to Fuzz: Application-Independent Fuzz Testing with Probabilistic, Generative Models of Input Data}},
+    year = {2016},
+    author = {Patra, J. and Pradel, M.},
+    institution = {TU Darmstadt}
+}
+
+@article{Allamanis2017a,
+    title = {{A Survey of Machine Learning for Big Code and Naturalness}},
+    year = {2017},
+    journal = {arXiv:1709.06182},
+    author = {Allamanis, M. and Barr, E. T. and Devanbu, P. and Sutton, C.},
+    arxivId = {arXiv:1709.06182v1}
+}
+
+@inproceedings{Hellendoorn2017,
+    title = {{Are deep neural networks the best choice for modeling source code?}},
+    year = {2017},
+    booktitle = {ESEC/FSE},
+    author = {Hellendoorn, V. J. and Devanbu, P.},
+    isbn = {9781450351058},
+    doi = {10.1145/3106237.3106290}
+}
+
+@inproceedings{Kitzelmann2009,
+    title = {{Inductive Programming: A Survey of Program Synthesis Techniques}},
+    year = {2009},
+    booktitle = {AAIP},
+    author = {Kitzelmann, E.}
+}
+
+@article{Groce2016,
+    title = {{Cause Reduction: Delta Debugging, even without Bugs}},
+    year = {2016},
+    journal = {STVR},
+    author = {Groce, A. and Alipour, M. A. and Zhang, C. and Chen, Y. and Regehr, J.},
+    number = {1},
+    volume = {26}
+}
+
+@inproceedings{Groce2017,
+    title = {{One Test to Rule Them All}},
+    year = {2017},
+    booktitle = {ISSTA},
+    author = {Groce, A. and Holmes, J. and Kellar, K.},
+    publisher = {ACM}
+}
+
+@article{Menon,
+    title = {{Textual Features for Programming by Example}},
+    year = {2012},
+    journal = {arXiv:1209.3811},
+    author = {Menon, A. K. and Tamuz, O. and Gulwani, S. and Lampson, B. and Kalai, A. T.}
+}
+
+@inproceedings{Maddison,
+    title = {{Structured Generative Models of Natural Source Code}},
+    year = {2014},
+    booktitle = {ICML},
+    author = {Maddison, C. J. and Tarlow, D.}
+}
+
+@article{Becker2017,
+    title = {{AI Programmer: Autonomously Creating Software Programs Using Genetic Algorithms}},
+    year = {2017},
+    journal = {arXiv:1709.05703},
+    author = {Becker, K. and Gottschlich, J.},
+    arxivId = {1709.05703}
+}
+
+@inproceedings{Pacheco2007,
+    title = {{Feedback-directed Random Test Generation}},
+    year = {2007},
+    booktitle = {ICSE},
+    author = {Pacheco, C. and Lahiri, S. K. and Ernst, M. D. and Ball, T.}
+}
+
+@article{Alipour2016,
+    title = {{Generating Focused Random Tests Using Directed Swarm Testing}},
+    year = {2016},
+    journal = {ISSTA},
+    author = {Alipour, A. and Groce, A. and Gopinath, R. and Christi, A.}
+}
+
+@inproceedings{Orso2014,
+    title = {{Software testing: a research travelogue (2000–2014)}},
+    year = {2014},
+    booktitle = {FOSE},
+    author = {Orso, A. and Rothermel, G.},
+    keywords = {software testing}
+}
+
+@inproceedings{Zhang2014,
+    title = {{Using Test Case Reduction and Prioritization to Improve Symbolic Execution}},
+    year = {2014},
+    booktitle = {ISSTA},
+    author = {Zhang, C. and Groce, A. and Alipour, M. A.},
+    publisher = {ACM},
+    keywords = {Symbolic execution, Test case reduction, Test prioritization}
+}
+
+@inproceedings{Herfert,
+    title = {{Automatically Reducing Tree-Structured Test Inputs}},
+    year = {2017},
+    booktitle = {ASE},
+    author = {Herfert, S. and Patra, J. and Pradel, M.}
+}
+
+@article{Pei2015,
+    title = {{Taming a fuzzer using delta debugging trails}},
+    year = {2015},
+    journal = {IEEE International Conference on Data Mining Workshops, ICDMW},
+    author = {Pei, Yuanli and Christi, Arpit and Fern, Xiaoli and Groce, Alex and Wong, Weng Keen},
+    number = {January},
+    pages = {840--843},
+    volume = {2015-Janua},
+    isbn = {978-1-4799-4274-9},
+    doi = {10.1109/ICDMW.2014.58},
+    issn = {23759259},
+    keywords = {Automated Testing, Fuzzer Taming, Fuzzing, Software Testing, Test-Case Reduction}
+}
+
+@inproceedings{Groce2014,
+    title = {{Cause reduction for quick testing}},
+    year = {2014},
+    booktitle = {ICST},
+    author = {Groce, A. and Alipour, M. A. and Zhang, C. and Chen, Y. and Regehr, J.},
+    isbn = {9780769551852},
+    doi = {10.1109/ICST.2014.37},
+    issn = {2159-4848},
+    keywords = {random testing, regression testing, test case minimization}
+}
+
+@inproceedings{Diehlb,
+    title = {{Verified Stack-Based Genetic Programming via Dependent Types}},
+    year = {2011},
+    booktitle = {AAIP},
+    author = {Diehl, L.}
+}
+
+@inproceedings{Spector2005,
+    title = {{The Push3 execution stack and the evolution of control}},
+    year = {2005},
+    booktitle = {GECCO},
+    author = {Spector, L. and Klein, J. and Keijzer, M.},
+    keywords = {Fibonacci sequence, combinators, experimentation, exponentiation, factorial, genetic algorithms, genetic programming, iteration, languages, parity, push, recursion, reversing a list, sorting, stack-based genetic programming}
+}
+
+@article{Spector2002,
+    title = {{Genetic Programming and Autoconstructive Evolution with the Push Programming Language}},
+    year = {2002},
+    journal = {GPEM},
+    author = {Spector, Lee and Robinson, Alan},
+    number = {1},
+    volume = {3},
+    keywords = {artificial life, genetic algorithms, genetic programming, modularity, programming languages, self-adaptation}
+}
+
+@inproceedings{Pantridge2017,
+    title = {{PyshGP: PushGP in Python}},
+    year = {2017},
+    booktitle = {GECCO},
+    author = {Pantridge, E. and Spector, L.}
+}
+
+@article{Hoschele2017,
+    title = {{Active Learning of Input Grammars}},
+    year = {2017},
+    journal = {arXiv:1708.08731},
+    author = {H{\"{o}}schele, M. and Kampmann, A. and Zeller, A.}
+}
+
+@article{Singh2017,
+    title = {{AP: Artificial Programming}},
+    year = {2017},
+    journal = {SNAPL},
+    author = {Singh, R. and Kohli, P.},
+    keywords = {neural flashfill, neural program synthesis, neural programming}
+}
+
+@article{Godefroid2017,
+    title = {{Learn{\&}Fuzz: Machine Learning for Input Fuzzing}},
+    year = {2017},
+    journal = {arXiv:1701.07232},
+    author = {Godefroid, P. and Peleg, H. and Singh, R.}
+}
+
+@inproceedings{Wang2013b,
+    title = {{Towards Optimization-Safe Systems: Analyzing the Impact of Undefined Behavior}},
+    year = {2013},
+    booktitle = {SOSP},
+    author = {Wang, X. and Zeldovich, N. and Kaashoek, M. F. and Solar-Lezama, A.}
+}
+
+@inproceedings{Yan2017,
+    title = {{ExploitMeter: Combining Fuzzing with Machine Learning for Automated Evaluation of Software Exploitability}},
+    year = {2017},
+    booktitle = {PAC},
+    author = {Yan, G. and Lu, J. and Shu, Z. and Kucuk, Y.},
+    publisher = {IEEE}
+}
+
+@article{2017FindingTesting,
+    title = {{Finding Missed Compiler Optimizations by Differential Testing}},
+    year = {2017},
+    keywords = {differential testing, optimization, random-}
 }
