Update on Overleaf.

--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -418,3 +418,6 @@ Table~\ref{tab:clangs} shows the 7 distinct assertions triggered during this exp
 \end{table}
 
 The results emphasize that compiler validation is a moving target. Every change and feature addition has the potential to introduce regressions or new failure cases. Since LLVM will not release unless their compiler passes their own extensive test suites, this also reinforces the case for compiler fuzzing. We believe our approach provides an effective means for the generation of such fuzzers, at a fraction of the cost of existing techniques.
+
+\subsection{Extensibility: Solidity}
+
