--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -2,7 +2,7 @@
 
 \cc{TODO: ASPLOS reviewer suggestions~\cite{Wang2013b,Godefroid2017,Yan2017}.}
 
-\cc{TODO: TreeFuzz~\cite{Patra2016}.}
+\cc{TODO: TreeFuzz~\cite{Patra2016}, interesting recent work on Ocaml~\cite{Midtgaard2017}.}
 
 The random generation of test cases is a well established approach to the compiler validation problem. Prior approaches are surveyed in~\cite{Kossatchev2005,Boujarwah1997} and empirically contrasted in~\cite{Chen2014a}. The main question of interest is in how to efficiently generate codes which trigger bugs. There are two main approaches: \emph{program generation}, in which inputs are synthesized from scratch, typically by stochastic enumeration of a grammar; and \emph{program mutation}, in which existing codes are modified and mutated so as to identify anomalous behavior.
 
