ISSTA'18 submission format

--- a/preamble.tex
+++ b/preamble.tex
@@ -5,10 +5,10 @@
 % PLDI'16 web site.
 %
 %\documentclass[pageno,nonatbib]{jpaper}
-\documentclass[pageno]{jpaper}
+% \documentclass[pageno]{jpaper}
 % \documentclass[pldi-cameraready]{sigplanconf-pldi16}
-
-\newcommand{\asplossubmissionnumber}{190}
+\documentclass[sigconf,review,anonymous]{acmart}
+\acmConference[ISSTA 2018]{ACM SIGSOFT International Symposium on Software Testing and Analysis}{16–22 July, 2018}{Amsterdam, The Netherlands}
 
 \usepackage[utf8]{inputenc}
 
@@ -83,7 +83,7 @@
 \usepackage{tabularx}
 \usepackage{hhline}
 \usepackage{xspace}
-\usepackage[table]{xcolor}
+% \usepackage[table]{xcolor}
 
 % Define column types L, C, R with known text justification and fixed widths:
 \usepackage{array}
