--- a/sec/deepsmith.tex
+++ b/sec/deepsmith.tex
@@ -68,6 +68,7 @@ Unlike the generative model, this test harness is language-specific and the desi
   \includegraphics[width=\columnwidth]{img/testprocess-long}%
   \caption{%
  	  Test case execution, and possible results.%
+     \vspace{-1.1em}
   }%
   \label{fig:test-process} %
 \end{figure}
