--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -11,6 +11,7 @@ In this section we describe the particular experimental parameters used.
   \input{build/tab/platforms}
   \caption{%
     OpenCL systems and the number of bug reports submitted to date. For each system, two testbeds are created, one with compiler optimizations, the other without.%
+    \vspace{-.5em}
   }
   \label{tab:platforms}
 \end{table*}
