Update on Overleaf.

--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -429,6 +429,6 @@ The results emphasize that compiler validation is a moving target. Every change 
 
 \subsection{Solidity}
 
-Solidity, the programming language of the Ethereum Blockchain. Syntax based on JavaScript. Reference compiler \texttt{solc}.
+\cc{TODO\ldots} Solidity, the programming language of the Ethereum Blockchain. Syntax based on JavaScript. Reference compiler \texttt{solc}.
 
 \paragraph{Assembling the corpus} Scraped GitHub for solidity sources. Recursively inlined imported modules in a manner similar to~\cite{Cummins2017a}. No preprocessor (Solidity doesn't have one).
