Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -8497,7 +8497,7 @@
 @article{Arcuri2012,
     title = {{Random testing: Theoretical results and practical implications}},
     year = {2012},
-    journal = {IEEE Transactions on Software Engineering},
+    journal = {TSE},
     author = {Arcuri, Andrea and Iqbal, Muhammad Zohaib and Briand, Lionel},
     number = {2},
     volume = {38},
@@ -11913,10 +11913,10 @@
     keywords = {Fault-based testing, Metamorphic testing, Oracle problem, Symbolic execution}
 }
 
-@article{Spieker2017,
+@inproceedings{Spieker2017,
     title = {{Reinforcement Learning for Automatic Test Case Prioritization and Selection in Continuous Integration}},
     year = {2017},
-    journal = {Proceedings of 26th International Symposium on Software Testing and Analysis (ISSTA’17)},
+    booktitle = {ISSTA},
     author = {Spieker, Helge and Gotlieb, Arnaud and Marijan, Dusica and Mossige, Morten},
     isbn = {9781450350761},
     doi = {10.1145/3092703.3092709},
@@ -12156,7 +12156,7 @@
 @article{Pei2015,
     title = {{Taming a fuzzer using delta debugging trails}},
     year = {2015},
-    journal = {IEEE International Conference on Data Mining Workshops, ICDMW},
+    journal = {ICDMW},
     author = {Pei, Yuanli and Christi, Arpit and Fern, Xiaoli and Groce, Alex and Wong, Weng Keen},
     number = {January},
     pages = {840--843},
@@ -12245,6 +12245,30 @@
     booktitle = {PAC},
     author = {Yan, G. and Lu, J. and Shu, Z. and Kucuk, Y.},
     publisher = {IEEE}
+}
+
+@inproceedings{Donaldson2017,
+    title = {{Automated Testing of Graphics Shader Compilers}},
+    year = {2017},
+    booktitle = {OOPSLA},
+    author = {Donaldson, A. and Evrard, H. and Lascu, A. and Thomson, P.},
+    publisher = {ACM}
+}
+
+@inproceedings{Sampson2017,
+    title = {{Static Stages for Heterogeneous Programming}},
+    year = {2017},
+    booktitle = {OOPSLA},
+    author = {Sampson, A. and McKinley, K. S. and Mytkowicz, T.},
+    doi = {10.1145/3133895},
+    keywords = {Multi-stage programming, OpenGL, graphics programming, heterogeneous programming}
+}
+
+@techreport{Pradel2017,
+    title = {{Deep Learning to Find Bugs}},
+    year = {2017},
+    author = {Pradel, M. and Sen, K.},
+    institution = {TU Darmstadt}
 }
 
 @article{2017FindingTesting,
